# sensors-minds

./: README.md
assets/: horizontal-logo.psd  logo.psd
backend/sensorminds/: pom.xml
backend/sensorminds/src/main/java/it/sensorminds/: SensorDataEntity.java  SensormindsApplication.java
backend/sensorminds/src/main/java/it/sensorminds/api/: SensorDataController.java
backend/sensorminds/src/main/java/it/sensorminds/enumerator/: SensorType.java
backend/sensorminds/src/main/java/it/sensorminds/model/: IncomingData.java  Page.java  PaginatedResponse.java  SensorDataModel.java  SensorList.java  SensorResponseForSensor.java  SensorResponseForType.java  SensorTimeSeriesData.java  SmartPlugData.java  UploadBody.java
backend/sensorminds/src/main/java/it/sensorminds/mqtt/: AppConfig.java  MqttConfig.java  SchemaConfig.java
backend/sensorminds/src/main/java/it/sensorminds/repository/: SensorDataRepository.java
backend/sensorminds/src/main/java/it/sensorminds/service/: MqttService.java  MqttServiceImpl.java  SensorDataService.java
backend/sensorminds/src/main/resources/: app-config.yaml  application.properties  sensor_data.csv
backend/sensorminds/src/test/java/it/sensorminds/: SensormindsApplicationTests.java
firmware/: CMakeLists.txt  README.md  rpimqtt.c
firmware/dht/: CMakeLists.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: mockData.json  mockSensors.json
frontend/src/: App.tsx  main.css
frontend/src/components/: Dashboard.tsx  Filters.tsx  SensorDashboard.tsx  SensorSelector.tsx  Upload.tsx  useInterval.tsx
frontend/src/components/common/: ContentWrapper.tsx  Header.tsx  Loading.tsx
frontend/src/components/pages/: Dashboard.tsx
frontend/src/interfaces/: Sensor.ts  SensorData.ts
